--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,9 +1,9 @@
 * {
-    background-color: rgb(206, 204, 204)
+    background-image: url('https://imgur.com/nhX3VEW.jpg');
 }
 
 .nav-tabs{
-    color: rgb(0, 0, 0);
+    color: rgb(245, 239, 239);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: large;
     justify-content: center;
